src/test/resources/testData/annotation/IDEA_106515_2.hx
class <text_attr descr="null">Test</text_attr> {
  public static function <text_attr descr="null">main</text_attr>() {
    <error descr="Unresolved type">TArray</error>;
  }
}